# static-fifo

./: FIFO.hpp  LICENSE
.github/workflows/: ci.yml
tests/: CMakeLists.txt  tests_fifo.cpp
